icons, export all, batch import

--- a/extension/devtools/views/Viewport.html
+++ b/extension/devtools/views/Viewport.html
@@ -24,6 +24,8 @@
 				<ul class="dropdown-menu">
 					<li><a id="create-sitemap-create-nav-button">Create sitemap</a></li>
 					<li><a id="create-sitemap-import-nav-button">Import sitemap</a></li>
+					<li><a id="create-sitemap-batch-import-nav-button">Batch import sitemaps</a></li>
+					<li><a id="create-sitemap-export-all-nav-button">Export all sitemaps</a></li>
 				</ul>
 			</li>
 		</ul>
