--- a/extension/devtools/views/Viewport.html
+++ b/extension/devtools/views/Viewport.html
@@ -26,6 +26,7 @@
 					<li><a id="create-sitemap-import-nav-button">Import sitemap</a></li>
 					<li><a id="create-sitemap-batch-import-nav-button">Batch import sitemaps</a></li>
 					<li><a id="create-sitemap-export-all-nav-button">Export all sitemaps</a></li>
+					<li><a id="create-sitemap-scrape-all-nav-button">Scrape all sitemaps</a></li>
 				</ul>
 			</li>
 		</ul>
